--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <div class="content">
+
         <div class="front">
+
             <div class="logo">
                 <i class="fa-solid fa-circle-exclamation"></i>
                 <div class="title">Confirm</div>
@@ -28,6 +30,11 @@
                 <button class="delete">Yes, Delete!</button>
                 <button class="Cancel">Cancel!</button>
             </div>
+
+        </div>
+
+        <div class="back-end">
+            <button>Click Me</button>
         </div>
         
     </div>
