--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
             </div>
     
             <div class="btns">
-                <button class="delete">Yes, Delete!</button>
-                <button class="Cancel">Cancel!</button>
+                <button class="delete" id="delete">Yes, Delete!</button>
+                <button class="Cancel" id="Cancel">Cancel!</button>
             </div>
 
         </div>
-
-        <div class="back-end">
-            <button>Click Me</button>
-        </div>
         
+    </div>
+    <div class="back-end">
+        <button id="Click Me">Click Me</button>
     </div>
 </body>
 </html>
